// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages can be created/edited/published/unpublished/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createPage": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deletePage": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be published 1`] = `
Object {
  "data": Object {
    "publishPage": Object {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": Object {
        "publishedAt": 2020-11-25T23:55:35.000Z,
        "revision": 0,
        "updatedAt": 2020-11-25T23:55:35.000Z,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "page": Object {
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be unpublished 1`] = `
Object {
  "data": Object {
    "unpublishPage": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updatePage": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can not be published with the same slug 1`] = `
Object {
  "data": Object {
    "publishPage": null,
  },
  "errors": Any<Array>,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
